# branch-research-companion

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  PR5_REVIEW_SUMMARY.md  PROJECT_LOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: architecture.yml  ci.yml
docs/: ARCHITECTURE.md
docs/architecture/: CODE_STRUCTURE.md  structure.json
docs/dev-logs/: README.md  session-001-project-setup.md
docs/dev-logs/2025/12/09/: codex-185322-db-schema.md  copilot-130617-env-config-setup.md  copilot-140318-pr5-review.md  copilot-140318-review-complete.md  copilot-143000-project-setup.md
scripts/: generate_arch_docs.py
src/branch/: __init__.py  cli.py  config.py
src/branch/buffer/: __init__.py
src/branch/capture/: __init__.py
src/branch/models/: __init__.py  document.py  idea_fragment.py  session.py
src/branch/reader/: __init__.py
src/branch/storage/: __init__.py  repository.py  schema.py  sqlite.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_storage_schema.py
