[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-research-companion"
version = "0.1.0"
description = "A reading-first research companion for capturing ideas without breaking flow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "research",
    "reading",
    "note-taking",
    "idea-capture",
    "pdf-reader"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymupdf>=1.23.0",      # PDF handling
    "pydantic>=2.0.0",       # Data validation
    "sqlalchemy>=2.0.0",     # Database ORM
    "rich>=13.0.0",          # CLI formatting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
ai = [
    "ollama>=0.1.0",         # Local LLM integration
    "openai-whisper>=20231117",  # Voice transcription
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/branch-research-companion"
Documentation = "https://github.com/YOUR_USERNAME/branch-research-companion#readme"
Repository = "https://github.com/YOUR_USERNAME/branch-research-companion"
Issues = "https://github.com/YOUR_USERNAME/branch-research-companion/issues"

[project.scripts]
branch = "branch.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/branch"]

# Ruff configuration (fast Python linter)
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["branch"]

# Black configuration
[tool.black]
target-version = ["py311"]
line-length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["src/branch"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
