[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-research-companion"
version = "0.1.0"
description = "A reading-first research companion for capturing ideas without breaking flow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mohsin Khan", email = "mohsin@example.com" }
]
keywords = [
    "research",
    "reading",
    "note-taking",
    "idea-capture",
    "pdf-reader"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymupdf>=1.23.0",       # PDF handling
    "pydantic>=2.0.0",       # Data validation
    "sqlalchemy>=2.0.0",     # Database ORM
    "rich>=13.0.0",          # CLI formatting
    "click>=8.1.0",          # CLI framework
    "python-dotenv>=1.0.0",  # Environment variable management
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",   # Parallel test execution
    # Linting & Formatting (Ruff replaces black, isort, flake8)
    "ruff>=0.8.0",
    # Type checking
    "mypy>=1.8.0",
    # Pre-commit hooks
    "pre-commit>=3.6.0",
    # Architecture & Documentation
    "radon>=6.0.0",          # Code metrics (complexity, maintainability)
    "pydeps>=1.12.0",        # Dependency graphs
    "pdoc>=14.0.0",          # API documentation
]
ai = [
    "ollama>=0.1.0",         # Local LLM integration
    "openai-whisper>=20231117",  # Voice transcription
]

[project.urls]
Homepage = "https://github.com/mohsinkhn/branch-research-companion"
Documentation = "https://github.com/mohsinkhn/branch-research-companion#readme"
Repository = "https://github.com/mohsinkhn/branch-research-companion"
Issues = "https://github.com/mohsinkhn/branch-research-companion/issues"

[project.scripts]
branch = "branch.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/branch"]

# =============================================================================
# Ruff Configuration - Fast Python Linter & Formatter
# Replaces: black, isort, flake8, pyupgrade, and more
# Docs: https://docs.astral.sh/ruff/
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

# Exclude common non-source directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    # Import sorting
    "I",      # isort
    # Code quality
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    # Type annotations
    "ANN",    # flake8-annotations
    "TCH",    # flake8-type-checking
    # Documentation
    "D",      # pydocstyle
    # Security
    "S",      # flake8-bandit (security)
    # Best practices
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
]

ignore = [
    # Allow missing type annotations in some places
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    # Docstring rules we're relaxing for now
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    # Other
    "S101",    # Use of assert (needed for tests)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["branch"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can have more relaxed rules
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ANN",     # Type annotations optional in tests
    "D",       # Docstrings optional in tests
    "PLR2004", # Magic values fine in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# MyPy Configuration - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
plugins = ["pydantic.mypy"]

# Show error codes in output
show_error_codes = true

# Exclude test files from strict checking
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing imports for some packages
[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "ollama.*",
    "whisper.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show extra test summary info
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/branch"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# UV Configuration (if using uv.lock)
# =============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pydeps>=3.0.1",
    "radon>=6.0.1",
]
